feat: lots of improvements

--- a/idk/styles.html
+++ b/idk/styles.html
@@ -28,231 +28,87 @@
   </head>
   <body>
     <div class="h-screen w-screen flex items-center justify-center">
-      <div class="w-[calc(256px*4)] grid-cols-4 grid" id="my-node">
-        <div class="w-[256px] h-[256px] bg-[#6F6A5E]"></div>
-        <div class="w-[256px] h-[256px] bg-[#1F2829]"></div>
-        <div class="w-[256px] h-[256px] bg-transparent"></div>
-        <div class="w-[256px] h-[256px] bg-[#CCD0D1]"></div>
+      <div class="w-[calc(256px*5)] grid-cols-5 grid" id="my-node">
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 right-0 top-0 -translate-y-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
           ></div>
-
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#53CBff] z-10"></div>
-          </div>
         </div>
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="w-full h-[52px] bg-[#1F2829] flex items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#53CBff]"></div>
-          </div>
+            class="absolute left-0 right-0 top-0 -translate-y-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute left-0 bottom-0 top-0 -translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
         </div>
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 bottom-0 top-0 -translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
           ></div>
           <div
-            class="absolute top-0 right-1/2 translate-x-1/2 h-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute right-0 bottom-0 top-0 translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
           ></div>
-          <div
-            class="absolute top-0 right-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 right-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-bl-3xl"
-            ></div>
-          </div>
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#53CBff] z-10"></div>
-          </div>
         </div>
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-full h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 right-0 top-0 -translate-y-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
           ></div>
           <div
-            class="absolute top-0 right-1/2 translate-x-1/2 h-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 bottom-0 top-0 -translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
           ></div>
           <div
-            class="absolute top-0 right-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 right-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-bl-3xl"
-            ></div>
-          </div>
-          <div
-            class="absolute top-0 left-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 left-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-br-3xl"
-            ></div>
-          </div>
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#53CBff] z-10"></div>
-          </div>
+            class="absolute right-0 bottom-0 top-0 translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
         </div>
 
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute right-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
-
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#e9ad33] z-10"></div>
-          </div>
         </div>
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="w-full h-[52px] bg-[#1F2829] flex items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#e9ad33]"></div>
-          </div>
+            class="absolute left-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute right-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
         </div>
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
           <div
-            class="absolute top-0 right-1/2 translate-x-1/2 h-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute right-0 bottom-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
-          <div
-            class="absolute top-0 right-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 right-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-bl-3xl"
-            ></div>
-          </div>
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#e9ad33] z-10"></div>
-          </div>
         </div>
         <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
           <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-full h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
           <div
-            class="absolute top-0 right-1/2 translate-x-1/2 h-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute right-0 bottom-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
           <div
-            class="absolute top-0 right-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 right-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-bl-3xl"
-            ></div>
-          </div>
-          <div
-            class="absolute top-0 left-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 left-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-br-3xl"
-            ></div>
-          </div>
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#e9ad33] z-10"></div>
-          </div>
-        </div>
-
-        <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
-        >
-          <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+            class="absolute left-0 bottom-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
-
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#4dffde] z-10"></div>
-          </div>
-        </div>
-        <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex"
-        >
-          <div
-            class="w-full h-[52px] bg-[#1F2829] flex items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#4dffde]"></div>
-          </div>
-        </div>
-        <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
-        >
-          <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
-          ></div>
-          <div
-            class="absolute top-0 right-1/2 translate-x-1/2 h-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
-          ></div>
-          <div
-            class="absolute top-0 right-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 right-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-bl-3xl"
-            ></div>
-          </div>
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#4dffde] z-10"></div>
-          </div>
-        </div>
-        <div
-          class="w-[256px] h-[256px] bg-[#CCD0D1] items-center justify-center flex relative"
-        >
-          <div
-            class="absolute right-0 top-1/2 -translate-y-1/2 w-full h-[52px] bg-[#1F2829] flex items-center justify-center"
-          ></div>
-          <div
-            class="absolute top-0 right-1/2 translate-x-1/2 h-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
-          ></div>
-          <div
-            class="absolute top-0 right-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 right-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-bl-3xl"
-            ></div>
-          </div>
-          <div
-            class="absolute top-0 left-0 h-1/2 w-1/2 bg-[#1F2829] flex items-center justify-center"
-          >
-            <div
-              class="absolute top-0 left-0 h-[calc(100%-52px/2)] w-[calc(100%-52px/2)] bg-[#CCD0D1] flex items-center justify-center rounded-br-3xl"
-            ></div>
-          </div>
-          <div
-            class="flex w-[52px] h-[52px] rounded-3xl bg-[#1F2829] z-10 items-center justify-center"
-          >
-            <div class="flex h-6 w-6 rounded-full bg-[#4dffde] z-10"></div>
-          </div>
         </div>
       </div>
     </div>
