--- a/idk/styles.html
+++ b/idk/styles.html
@@ -69,7 +69,22 @@
             class="absolute right-0 bottom-0 top-0 translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
           ></div>
         </div>
-
+        <div
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
+        >
+          <div
+            class="absolute left-0 right-0 top-0 -translate-y-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute left-0 bottom-0 top-0 -translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute right-0 bottom-0 top-0 translate-x-1/2 w-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute right-0 bottom-0 left-0 translate-y-1/2 h-[52px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+        </div>
         <div
           class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
         >
@@ -108,6 +123,22 @@
           ></div>
           <div
             class="absolute left-0 bottom-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+        </div>
+        <div
+          class="w-[256px] h-[256px] bg-transparent items-center justify-center flex relative overflow-hidden"
+        >
+          <div
+            class="absolute left-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute right-0 bottom-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute left-0 bottom-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
+          ></div>
+          <div
+            class="absolute right-0 top-0 h-[26px] w-[26px] bg-[#1F2829] flex items-center justify-center"
           ></div>
         </div>
       </div>
